<resources>
    <string name="app_name">Hit Count</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CountButtonText">HIT</string>
    <string name="StartButtonText">START</string>
    <string name="ResetButtonText">RESET</string>
    <string name="PauseButtonText">PAUSE</string>
    <string name="CountText">Press START to play!</string>
    <string name="TimerText">WELCOME!</string>

</resources>
